# math_assistant

client/: ARCHITECTURE.md  IMPROVEMENTS.md  MIGRATION.md  MIGRATION_COMPLETE.md  QUICKSTART.md  STATUS.md  SUMMARY.md  next.config.js  package.json  pnpm-lock.yaml
client/public/: test-backend.js
client/src/app/: MathRagApp.tsx  layout.tsx  page.tsx
client/src/components/: MathRagApp.tsx  Providers.tsx
client/src/components/features/: ChatPanel.tsx  CoursePanel.tsx  ExamPanel.tsx  FormulaPanel.tsx  GradePanel.tsx  Header.tsx  PanelSelector.tsx  ReviewPanel.tsx  SheetPanel.tsx  index.ts
client/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  MarkdownMath.tsx  OutputBox.tsx  Select.tsx  TextArea.tsx  index.ts
client/src/hooks/: index.ts  useBackendHealth.ts  useLocalStorage.ts  useStream.ts
client/src/lib/: api.ts  markdown.ts  sse.ts  utils.ts
client/src/styles/: math-rag.css
client/src/types/: index.ts
server/: .env  .env.example  ARCHITECTURE_SOLID_PROPOSAL.md  CHANGELOG.md  CLI_INTEGRATION.md  COMMANDS.md  COURSE_PROMPTS_IMPROVEMENT.md  DOCUMENTATION_INDEX.md  FEATURE_AUDIT.md  GUIDE_TECHNIQUE_COMMANDES.md  GUI_IMPROVEMENTS.md  INDEX_FICHIERS_COURS.md  INTEGRATION_CLI_COMPLETE.md  KANBAN_SPRINTS.md  LATEX_NORMALIZATION.md  MIGRATION.md  MIGRATION_TO_FACADE.md  Makefile  NEXT_STEPS_PHASE5.md  PHASE4_COMPLETE.md  QUICKSTART.md  QUICKSTART_COURS.md  QUICK_REFERENCE.md  README_MATH_RAG.md  README_REFACTORED.md  RECAP_COURS_AMELIORES.md  RECOMMENDATIONS.md  REFACTORING_SUMMARY.md  RESUME_FINAL_COURS.md  SOLID_PHASE1_COMPLETE.md  SOLID_PHASE2_COMPLETE.md  TROUBLESHOOTING.md  demo_course_comparison.py  example_usage.py  fix_llm_generate_calls.py  inspect_prompts.py  pyproject.toml  server.py  start.sh  start_backend.sh  (+16 more)
server/before/: math_assistant_cli.py  math_assistant_gui.py  prompts.py
server/before/model/: math_course_rag.py
server/before/utils/: lib.py  math_assistant_lib.py
server/data/: sft_qa.jsonl
server/db/chroma_db_math_v3_1/37e0331a-cb34-4d25-b323-3f60bb3fbe2a/: index_metadata.pickle
server/debug/: analyze_vectorstore.py  diagnostic_extraction.py  diagnostic_pdf.py
server/logs/debug/: 15d0bcce_1762155816165.json  15d0bcce_1762155869179.json
server/scripts/: gen_contrastive_pairs.py  gen_sft_qa.py  migrate.py  rebuild_db.py  run_cli.py  run_gui.py  test_block_normalization.py  train_reranker.py
server/src/application/: __init__.py
server/src/application/adapters/: __init__.py  legacy_assistant_adapter.py
server/src/application/facades/: __init__.py  math_assistant_facade.py
server/src/application/interfaces/: __init__.py  llm_provider.py  query_rewriter.py  retriever.py  router.py  session_store.py
server/src/application/use_cases/: __init__.py  answer_question.py  build_course.py  exams_and_assessments.py  explain_course.py  explain_theorem.py  generate_exercise.py  sheets_and_exercises.py  summarize_course.py  utilities.py
server/src/assistant/: __init__.py  assistant.py  prompts.py  router.py  tasks.py
server/src/config/: __init__.py  di_container.py  settings.py
server/src/controllers/: math_assistant_controller.py
server/src/core/: config.py  rag_engine.py
server/src/domain/: __init__.py  entities.py  value_objects.py
server/src/infrastructure/: __init__.py
server/src/infrastructure/llm/: __init__.py  fallback_provider.py  ollama_provider.py
server/src/infrastructure/query/: ollama_query_rewriter.py
server/src/infrastructure/retrieval/: __init__.py  hybrid_retriever.py
server/src/infrastructure/routing/: __init__.py  intent_detector.py  intent_router.py
server/src/infrastructure/session/: __init__.py  memory_store.py
server/src/prompts/: __init__.py  base.py  registry.py
server/src/prompts/course/: __init__.py
server/src/prompts/exams/: __init__.py
server/src/prompts/exercises/: __init__.py
server/src/prompts/qa/: __init__.py
server/src/prompts/utilities/: __init__.py
server/src/ui/cli/: __init__.py  app.py  styles.py
server/src/ui/gui/: __init__.py  app.py  styles.py  widgets.py
server/src/utils/: __init__.py  latex_processing.py  ollama.py  text_processing.py
